﻿IMPROVEMENTS / FIXES
- Sensors:
	- Add support for slaving turrets via targeting cameras.
	- Fix 'Slave Turret' button occasionally locking the turret to the vessel's origin point or non-target point in space.
	- Locking a target will no longer automatically slave active turrets to the target when manually controlling a craft. To slave turrets to a locked radar/camera, use the 'Slave Turret' button. 
- Countermeasures:
	- Add 'Ammo' gauges for Countermeasure dispensers for how many CMs they have remaining.
- AI:
	- Fix AttackVIP targeting priority impacting target priority weighting if no enemy VIP is present.
	- When assigning turret targets, AI now checks if target is within max range of the turret.
- Weapons:
	- Remove maxEngagementRange (default 5000m) check from bombs when AI is selecting what weapon to use.
	- Fix aim lead offset for weapons with deploy animations.
	- Fix missing lead target icon when using a radarlocked turret.

v1.10.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix colliders on the AWACS Radar when using legless variant.
	- Update the logic for syncing advanced 'Game Difficulty' settings to respect custom G-limit settings.
- UI:
	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
	- Update localisation synchronisation script and sync en-us to other languages. Missing entries are commented out and tagged with ??? and the English translation (to assist with user contributions).
	- Fix the wrongly labeled "ru-ru" localisation to "ru" so that it loads properly.
	- Add additional Chinese localisation thanks to user ZIYUXUAN201011.
	- Updated German localisation from EzBro.
	- Adjust waypoint ranking in the vessel switcher window to be based on the current score weights.
	- Fix m/km units in Team Icons to be used appropriately.