@@ -1,4 +1,6 @@
 ﻿IMPROVEMENTS / FIXES
+- UI: 
+	- Add competition marquee messages for fuel/ammo detonations from battle damage.
 - Sensors:
 	- Add support for slaving turrets via targeting cameras.
 	- Fix 'Slave Turret' button occasionally locking the turret to the vessel's origin point or non-target point in space.
@@ -8,6 +10,7 @@
 - AI:
 	- Fix AttackVIP targeting priority impacting target priority weighting if no enemy VIP is present.
 	- When assigning turret targets, AI now checks if target is within max range of the turret.
+	- Pilot AI using divebombing will now break off the dive when bombs have been released.
 - Weapons:
 	- Remove maxEngagementRange (default 5000m) check from bombs when AI is selecting what weapon to use.
 	- Fix aim lead offset for weapons with deploy animations.
